added tags and summary in userController swagger docs description
