# app/Http/Controllers/Api/v1/UserController.php
@@ -5,12 +5,13 @@ namespace App\Http\Controllers\Api\v1;
 use App\Http\Controllers\ApiController;
 use App\Http\Requests\User\IndexUserRequest;
 use App\Http\Requests\User\UpdateUserRequest;
+use App\Http\Requests\User\UpdateUserTokenRequest;
 use App\Services\Contracts\UserServiceInterface;
 
 /**
  * @OA\Schema(
  *     title="UserController",
- *     description="UserController APIs",
+ *     description="Авторизация требуется",
  *     @OA\Xml(
  *         name="UserController"
  *     )
@@ -27,19 +28,18 @@ class UserController extends ApiController
 
     /**
      * @OA\Get(
-     *     tags={"user"},
+     *     tags={"users"},
      *     summary="Index user",
-     *     description="Авторизация не требуется",
      *     operationId="createUser",
      *     @OA\RequestBody(
      *         required=false,
-     *         description="Created user object",
+     *         description="Index of user objects",
      *         @OA\MediaType(
-     *             mediaType="multipart/form-data",
+     *             mediaType="params",
      *             @OA\Schema(ref="#")
      *         )
      *     ),
-     *     path="/api/v1/user/",
+     *     path="/api/v1/users",
      *     @OA\Response(response="200", description="Список пользователей")
      * )
      */
@@ -53,7 +53,10 @@ class UserController extends ApiController
 
     /**
      * @OA\Get(
-     *     path="/api/v1/user/{id}",
+     *     tags={"users"},
+     *     summary="Show user",
+     *     operationId="showUser",
+     *     path="/api/v1/users/{id}",
      *     @OA\Response(response="200", description="Показать пользователя по id")
      * )
      */
@@ -63,9 +66,12 @@ class UserController extends ApiController
     }
 
     /**
-     * @OA\Put(
-     *     path="/api/v1/user/{id}",
-     *     @OA\Response(response="200", description="Изменить данные пользователя по id")
+     * @OA\Post(
+     *     tags={"users"},
+     *     summary="Update user",
+     *     operationId="updateUser",
+     *     path="/api/v1/users",
+     *     @OA\Response(response="200", description="Изменить данные авторизованного пользователя")
      * )
      */
     public function update(UpdateUserRequest $request)
@@ -76,9 +82,28 @@ class UserController extends ApiController
     }
 
     /**
+     * @OA\Put(
+     *     tags={"users"},
+     *     summary="Update user fb token",
+     *     operationId="updateUserFbToken",
+     *     path="/api/v1/users",
+     *     @OA\Response(response="200", description="Изменить firebase token авторизованного пользователя")
+     * )
+     */
+    public function updateToken(UpdateUserTokenRequest $request)
+    {
+        $data = $request->validated();
+
+        return $this->result($this->service->update($data));
+    }
+
+    /**
      * @OA\Delete(
-     *     path="/api/v1/user/{id}",
-     *     @OA\Response(response="200", description="Удалить пользователя по id")
+     *     tags={"users"},
+     *     summary="Delete user",
+     *     operationId="deleteUser",
+     *     path="/api/v1/users",
+     *     @OA\Response(response="200", description="Удалить авторизованного пользователя")
      * )
      */
     public function delete()
